--- a/CAPSULIN/templates/index.html
+++ b/CAPSULIN/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="chat-container">
-        <h2>💊 Capsulin   </h2>
+        <h2 style="text-align: center;">💊 Capsulin   </h2>
         <div id="chat-box"></div>
         <input type="text" id="user-input" placeholder="Escribe tu pregunta..." autocomplete="off">
         <button onclick="sendMessage()">Enviar</button>
